# thufir

./: .gitignore  Dockerfile  Dockerfile.slack  README.md
agent/: agent.py  api.py  config.py  content.py  postgres_client.py  pyproject.toml  supabase_client.py  thufir.py
slack/: app.py  client.py  config.py  handlers.py  pyproject.toml  verify_setup.py
